release/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: otel-collector
