release/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx-example
spec:
  ingressClassName: nginx-example
  selector:
    matchLabels:
      app: frontend
  rules:
  - host: demo.example.com
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
